--- a/warp-packer/Cargo.toml
+++ b/warp-packer/Cargo.toml
@@ -8,6 +8,7 @@ clap = "2.32.0"
 dirs = "1.0.4"
 reqwest = "0.9.2"
 tempdir = "0.3.7"
+rand = "0.6"
 flate2 = "1.0"
 tar = "0.4"
 lazy_static = "1.1.0"
