--- a/warp-packer/Cargo.toml
+++ b/warp-packer/Cargo.toml
@@ -2,13 +2,13 @@
 name = "warp-packer"
 version = "0.3.0"
 authors = ["Diego Giagio <diego@giagio.com>"]
+edition = "2018"
 
 [dependencies]
-clap = "2.32.0"
-dirs = "1.0.4"
-reqwest = "0.9.2"
+clap = "2.33.0"
+dirs = "2.0.2"
 tempdir = "0.3.7"
-rand = "0.6"
-flate2 = "1.0"
-tar = "0.4"
-lazy_static = "1.1.0"
+rand = "0.7.3"
+flate2 = "1.0.14"
+tar = "0.4.26"
+lazy_static = "1.4.0"
