--- a/warp-runner/Cargo.toml
+++ b/warp-runner/Cargo.toml
@@ -2,12 +2,13 @@
 name = "warp-runner"
 version = "0.3.0"
 authors = ["Diego Giagio <diego@giagio.com>"]
+edition = "2018"
 
 [dependencies]
 memmem = "0.1.1"
-flate2 = "1.0"
-tar = "0.4"
-dirs = "1.0.4"
-winapi = "0.3.6"
-log = "0.4.5"
-simple_logger = "1.0.1"
+flate2 = "1.0.14"
+tar = "0.4.26"
+dirs = "2.0.2"
+winapi = "0.3.8"
+log = "0.4.8"
+simple_logger = "1.6.0"
