Support target architecture selection via cargo features
Also add a cargo config to specify the target location since it is accessed at build time.

--- a/warp-packer/Cargo.toml
+++ b/warp-packer/Cargo.toml
@@ -12,3 +12,10 @@ rand = "0.7.3"
 flate2 = "1.0.14"
 tar = "0.4.26"
 lazy_static = "1.4.0"
+
+[features]
+default = ["target-native"]
+target-native = []
+target-linux_x64 = []
+target-macos_x64 = []
+target-windows_x64 = []
